--- a/LA_python/Math_1/ex1.ipynb
+++ b/LA_python/Math_1/ex1.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "19b28523",
       "metadata": {
-        "id": "19b28523",
-        "outputId": "c16b9b17-8608-4277-d439-ca733e1aa885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "19b28523",
+        "outputId": "91a46cf1-57a3-438c-feef-9a5202ad8e41"
       },
       "outputs": [
         {
@@ -55,14 +55,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "24da00ec",
       "metadata": {
-        "id": "24da00ec",
-        "outputId": "6ae3965a-183c-4dcc-fbc4-a6201972204f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "24da00ec",
+        "outputId": "530b3a35-efdb-436c-fd68-cefaeca8536d"
       },
       "outputs": [
         {
@@ -120,14 +120,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "id": "c90d03db",
       "metadata": {
-        "id": "c90d03db",
-        "outputId": "903e9306-de38-47ac-e4bf-12db64eb6fdc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c90d03db",
+        "outputId": "416f4729-da93-42c8-c5d7-0bb6d130e693"
       },
       "outputs": [
         {
@@ -185,11 +185,11 @@
       "execution_count": 14,
       "id": "199e0c29",
       "metadata": {
-        "id": "199e0c29",
-        "outputId": "120ab001-c995-4a00-f6ff-6345e874d05a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "199e0c29",
+        "outputId": "120ab001-c995-4a00-f6ff-6345e874d05a"
       },
       "outputs": [
         {
@@ -247,11 +247,11 @@
       "execution_count": 17,
       "id": "9457f258",
       "metadata": {
-        "id": "9457f258",
-        "outputId": "a33ea6ff-80d4-48ee-ecda-3d3c16fca6d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9457f258",
+        "outputId": "a33ea6ff-80d4-48ee-ecda-3d3c16fca6d3"
       },
       "outputs": [
         {
@@ -306,11 +306,11 @@
       "execution_count": 19,
       "id": "6336fb68",
       "metadata": {
-        "id": "6336fb68",
-        "outputId": "ed52f0f9-b13f-4346-b222-50c11f34fa95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6336fb68",
+        "outputId": "ed52f0f9-b13f-4346-b222-50c11f34fa95"
       },
       "outputs": [
         {
@@ -399,11 +399,11 @@
       "execution_count": 20,
       "id": "9c646eb9",
       "metadata": {
-        "id": "9c646eb9",
-        "outputId": "fa7e453e-64a6-4010-9b72-8ec66b4a2070",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9c646eb9",
+        "outputId": "fa7e453e-64a6-4010-9b72-8ec66b4a2070"
       },
       "outputs": [
         {
@@ -465,11 +465,11 @@
       "execution_count": 24,
       "id": "77687ff2",
       "metadata": {
-        "id": "77687ff2",
-        "outputId": "0e344504-08a6-4520-f5f6-54742c01048c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "77687ff2",
+        "outputId": "0e344504-08a6-4520-f5f6-54742c01048c"
       },
       "outputs": [
         {
@@ -526,11 +526,11 @@
       "execution_count": 72,
       "id": "5b4dd733",
       "metadata": {
-        "id": "5b4dd733",
-        "outputId": "28baec56-bd68-4e42-8a9f-0c39c94ff05a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5b4dd733",
+        "outputId": "28baec56-bd68-4e42-8a9f-0c39c94ff05a"
       },
       "outputs": [
         {
@@ -594,14 +594,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 5,
       "id": "b0215cd2",
       "metadata": {
-        "id": "b0215cd2",
-        "outputId": "d3fdcd70-8f66-4d0a-af7f-6d826c443092",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b0215cd2",
+        "outputId": "805117cf-f37d-488e-ac7e-508ee642c1a8"
       },
       "outputs": [
         {
@@ -611,7 +611,7 @@
             "e1 After Transformation [1 1 0]\n",
             "e2 After Transformation [1 0 1]\n",
             "e3 After Transformation [0 1 1]\n",
-            "Vector v After Transformation [5 6 7]\n"
+            "Vector v After Transformation [ 8 10 12]\n"
           ]
         }
       ],
@@ -631,7 +631,7 @@
         "print(\"e3 After Transformation\", np.matmul(A, e3))  # TODO: Test the transformation with basis vector e3\n",
         "\n",
         "# Test the transformation on another vector, e.g., v = [2, 3, 4]\n",
-        "v = np.array([2, 3, 4])\n",
+        "v = np.array([3, 5, 7])\n",
         "print(\"Vector v After Transformation\", np.matmul(A, v)) # TODO: Test the transformation with some vector v"
       ]
     },
@@ -658,11 +658,11 @@
       "execution_count": 76,
       "id": "de2625c2",
       "metadata": {
-        "id": "de2625c2",
-        "outputId": "3670eeea-2be2-4d31-dda3-f786aa732217",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "de2625c2",
+        "outputId": "3670eeea-2be2-4d31-dda3-f786aa732217"
       },
       "outputs": [
         {
@@ -718,18 +718,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "3bcc7172",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "3bcc7172",
-        "outputId": "d4d9d287-d740-4147-fad8-0638c7a5ea92"
+        "outputId": "825661fb-b5f0-4881-fbfb-689eda746bd0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Power property holds? True\n"
+            "Power property holds? True\n",
+            "[[ 8  0  0]\n",
+            " [ 0 27  0]\n",
+            " [ 0  0 64]]\n"
           ]
         }
       ],
@@ -738,8 +744,8 @@
         "k = 3\n",
         "\n",
         "# TODO: Fill in to verify the power property for diagonal matrices\n",
-        "left = None  # D raised to the power k\n",
-        "right = None # diag([2**k, 3**k, 4**k])\n",
+        "left = D**k # D raised to the power k\n",
+        "right = np.power(D, k) # diag([2**k, 3**k, 4**k])\n",
         "print(\"Power property holds?\", np.allclose(left, right)) # allclose checks if two matrices are equal"
       ]
     },
@@ -760,16 +766,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "38cef293",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "38cef293",
-        "outputId": "74d7f1e0-0224-4c45-bb51-f50fe36a934f"
+        "outputId": "2a68df3b-bc42-42ad-ad7a-4edc4d2f6f3f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Is Q orthogonal? True\n"
           ]
@@ -779,7 +788,7 @@
         "Q = np.array([[0, 1], [1, 0]])  # Example: permutation matrix\n",
         "\n",
         "# TODO: Fill in to check if Q is orthogonal\n",
-        "is_orthogonal = None  #Hint: Use np.allclose, np.eye\n",
+        "is_orthogonal = (np.allclose(np.matmul(Q.T, Q), np.eye(2)) and np.allclose(np.matmul(Q, Q.T), np.eye(2)))  #Hint: Use np.allclose, np.eye\n",
         "print(\"Is Q orthogonal?\", is_orthogonal)"
       ]
     },
@@ -799,16 +808,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "7573460e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "7573460e",
-        "outputId": "826d5a4c-3312-42c4-f635-79be4f972c02"
+        "outputId": "67f31675-d49b-46a0-883f-c2646c66825c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Is A symmetric? True\n"
           ]
@@ -818,7 +830,7 @@
         "A = np.array([[1, 2, 3], [2, 5, 6], [3, 6, 9]])\n",
         "\n",
         "# TODO: Fill in to check if A is symmetric\n",
-        "is_symmetric = None  # Use np.allclose, which checks if 2 matrices are equal\n",
+        "is_symmetric = np.allclose(A, A.T)  # Use np.allclose, which checks if 2 matrices are equal\n",
         "print(\"Is A symmetric?\", is_symmetric)"
       ]
     }
